--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<link rel="preload" as="style" href="assets/synergy/css/mbr-additional.css"><link rel="stylesheet" href="assets/synergy/css/mbr-additional.css" type="text/css">
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	<link rel="stylesheet" href="css/swiper.css" type="text/css" />
+	<link rel="stylesheet" href="css/dark.css" type="text/css" />
 	<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
 	<link rel="stylesheet" href="css/animate.css" type="text/css" />
 	<link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
@@ -91,19 +92,17 @@
 			</div>
 			<div class="header-wrap-clone"></div>
 	</header><!-- #header end -->
-		
-	<section data-bs-version="5.1" class="header1 cid-s48MCQYojq mbr-parallax-background" id="header1-f">
-		<div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(159, 219, 248);"></div>
-			
-		<div class="align-center container">
-			<div class="row justify-content-center">
-				<div class="col-12 col-lg-8">
-					<h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>S-Drill™</strong></h1>
-					<p class="mbr-text mbr-fonts-style display-7">Комплекс технических решений для строительства и ремонта скважин.</p>
-                </div>
+	
+	<!-- Page Title
+		============================================= -->
+		<section id="page-title" class="page-title-parallax page-title-dark" style="background-image: url('assets/images/img-9406-2000x1333.jpg'); background-size: cover; padding: 120px 0;" data-bottom-top="background-position:top;" data-top-bottom="background-position:top;">
+
+			<div class="container clearfix">
+				<h1>S-Drill™</h1>
+				<span>Комплекс технических решений для строительства и ремонта скважин.</span>
 			</div>
-		</div>
-	</section>
+
+		</section><!-- #page-title end -->
 
 		<section data-bs-version="5.1" class="slider4 mbr-embla cid-t7iZquo2IE" id="slider4-3r" style="padding-bottom: 3px;">
     
@@ -313,15 +312,21 @@
     </div>
 </section>
 
-	<section data-bs-version="5.1" class="footer7 cid-t7ivWmCwju" once="footers" id="footer7-16">
-		<div class="container">
-			<div class="media-container-row align-center mbr-white">
-				<div class="col-12">
-					<p class="mbr-text mb-0 mbr-fonts-style display-7"> © Copyright 2022 SynergyCom</p>
+<footer id="footer" class="dark">
+			<!-- Copyrights
+			============================================= -->
+			<div id="copyrights">
+				<div class="container">
+
+					<div class="row justify-content-between col-mb-30">
+						<div class="col-12 col-lg-auto text-center text-lg-start order-last order-lg-first">
+							Copyrights &copy; 2022 All Rights Reserved by SynergyCom.
+						</div>
+					</div>
+
 				</div>
-			</div>
-		</div>
-	</section>
+			</div><!-- #copyrights end -->
+</footer><!-- #footer end -->
 
 <!-- Footer Scripts
 	============================================= -->
