--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	
 	<!-- Page Title
 		============================================= -->
-		<section id="page-title" class="page-title-parallax page-title-dark" style="background-image: url('assets/images/img-9406-2000x1333.jpg'); background-size: cover; padding: 120px 0;" data-bottom-top="background-position:top;" data-top-bottom="background-position:top;">
+		<section id="page-title" class="page-title-parallax page-title-dark" style="background-image: url('assets/images/img-9406-2000x1333.jpg'); background-size: cover; padding: 120px 0;" data-bottom-top="background-position:center;" data-top-bottom="background-position:center;">
 
 			<div class="container clearfix">
 				<h1>S-Drill™</h1>
@@ -207,7 +207,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4 active">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <a href="page6.html"><img src="assets/images/cl-1-816x544.jpg"></a>
+                        <a href="page6.html"><img src="assets/images/one-cl.png"></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>S-Drill™ CL</strong></h5>
@@ -221,7 +221,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <a href="page7.html"><img src="assets/images/st-1-816x544.jpg" data-slide-to="1" data-bs-slide-to="1"></a>
+                        <a href="page7.html"><img src="assets/images/one-st.png" data-slide-to="1" data-bs-slide-to="1"></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>S-Drill™ St</strong></h5>
