--- a/page1.html
+++ b/page1.html
@@ -108,14 +108,14 @@
 				<div class="container">
 					<div class="row align-items-center">
 
-						<div class="col-lg-5">
+						<div class="col-12 col-lg">
 							<div class="heading-block">
 								<h1>Сохранение устойчивости глин</h1>
 							</div>
 							<p class="lead">Обеспечение устойчивости глинистых пород достигается за счет тщательно подобранной комбинации реагентов S-Drill™, обеспечивающей отсутствие влияния раствора на прочностные и деформационные свойства глин различной степени литификации ("эффект РУО")</p>
 						</div>
 
-						<div class="col-lg-7 align-self-end">
+						<div class="col-12 col-lg-6">
 
 							<div class="position-relative overflow-hidden">
 								<img src="assets/images/s-drill-1-1160x536.png">
@@ -132,11 +132,11 @@
 					<div class="container">
 
 						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
-							<div class="col-md-6">
+							<div class="col-12 col-lg">
 								<img src="assets/images/s-drill-2-748x378.jpg" alt="Image" class="center-block">
 							</div>
 
-							<div class="col-md-6">
+							<div class="col-12 col-lg-6">
 								<div class="heading-block">
 									<h2>Отсутствие загрязнения продуктивных пластов</h2>
 								</div>
@@ -154,14 +154,14 @@
 				<div class="container">
 					<div class="row align-items-center">
 
-						<div class="col-lg-5">
+						<div class="col-12 col-lg">
 							<div class="heading-block">
 								<h1>Эффективная борьба с поглощениями раствора</h1>
 							</div>
 							<p class="lead">Особенности бурового раствора S-Drill™ позволяют при возникновении поглощений трансформировать систему в вязко-упругий раствор для ликвидации поглощений S-Drill™ Concrete.</p>
 						</div>
 
-						<div class="col-lg-7 align-self-end">
+						<div class="col-12 col-lg-6">
 
 							<div class="position-relative overflow-hidden">
 								<img src="assets/images/s-drill-3-3456x2304.jpg">
