--- a/page1.html
+++ b/page1.html
@@ -112,7 +112,7 @@
 							<div class="heading-block">
 								<h1>Сохранение устойчивости глин</h1>
 							</div>
-							<p class="lead">Обеспечение устойчивости глинистых пород достигается за счет тщательно подобранной комбинации реагентов S-Drill™, обеспечивающей отсутствие влияния раствора на прочностные и деформационные свойства глин различной степени литификации ("эффект РУО")</p>
+							<p class="lead" style="line-height: 1;">Обеспечение устойчивости глинистых пород достигается за счет тщательно подобранной комбинации реагентов S-Drill™, обеспечивающей отсутствие влияния раствора на прочностные и деформационные свойства глин различной степени литификации ("эффект РУО")</p>
 						</div>
 
 						<div class="col-12 col-lg-6">
@@ -133,7 +133,7 @@
 
 						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
 							<div class="col-12 col-lg">
-								<img src="assets/images/s-drill-2-748x378.jpg" alt="Image" class="center-block">
+								<img src="assets/images/s-drill-2-748x378.jpeg" alt="Image" class="center-block" style="border-radius:70px">
 							</div>
 
 							<div class="col-12 col-lg-6">
@@ -141,7 +141,7 @@
 									<h2>Отсутствие загрязнения продуктивных пластов</h2>
 								</div>
 
-								<p>Сохранность коллекторских свойств продуктивного пласта обеспечивается за счет подбора компонентного состава бурового раствора S-Drill™ под фильтрационно-емкостные свойства индивидуально для каждого разрабатываемого месторождения.</p>
+								<p class="lead">Сохранность коллекторских свойств продуктивного пласта обеспечивается за счет подбора компонентного состава бурового раствора S-Drill™ под фильтрационно-емкостные свойства индивидуально для каждого разрабатываемого месторождения.</p>
 
 							</div>
 						</div>
@@ -158,13 +158,13 @@
 							<div class="heading-block">
 								<h1>Эффективная борьба с поглощениями раствора</h1>
 							</div>
-							<p class="lead">Особенности бурового раствора S-Drill™ позволяют при возникновении поглощений трансформировать систему в вязко-упругий раствор для ликвидации поглощений S-Drill™ Concrete.</p>
+							<p class="lead" style="line-height: 1;">Особенности бурового раствора S-Drill™ позволяют при возникновении поглощений трансформировать систему в вязко-упругий раствор для ликвидации поглощений S-Drill™ Concrete.</p>
 						</div>
 
 						<div class="col-12 col-lg-6">
 
 							<div class="position-relative overflow-hidden">
-								<img src="assets/images/s-drill-3-3456x2304.jpg">
+								<img src="assets/images/s-drill-3-1160x773.jpeg" style="border-radius:70px">
 							</div>
 
 						</div>
@@ -182,7 +182,7 @@
 							<h2>Уникальные свойства реагента S-Drill™ CL</h2>
 						</div>
 
-						<p>позволяют добиться стабильных показателей основных технологических свойств бурового раствора S-Drill™ в условиях различных видов агрессии.</p>
+						<p class="lead">позволяют добиться стабильных показателей основных технологических свойств бурового раствора S-Drill™ в условиях различных видов агрессии.</p>
 
 					</div>
 </div>
