--- a/page2.html
+++ b/page2.html
@@ -184,11 +184,11 @@
 					</div>
 </div>
 
-<div class="row justify-content-center col-mb-50 mb-0">
-						<div class="col-sm-6 col-lg-4">
-							<div class="feature-box fbox-center fbox-bg fbox-light fbox-effect">
-								<div class="fbox-icon">
-									<a href="#"><i class="i-alt">1</i></a>
+<div class="row justify-content-center col-mb-50 mb-0" style="padding-top: 30px;">
+						<div class="col-sm-6 col-lg-3">
+							<div class="feature-box text-center media-box fbox-bg">
+								<div class="fbox-media" style="margin-bottom: 0px;">
+									<a href="#"><img src="assets/images/concrete-2-1256x837.jpg" alt="Featured Box Image"></a>
 								</div>
 								<div class="fbox-content">
 									<h3>Определение фильтрационно-емкостных свойств<span class="subtitle">Расчет эквивалентного сечения каналов на основании математических моделей кольматационных процессов.
@@ -197,10 +197,10 @@
 							</div>
 						</div>
 
-						<div class="col-sm-6 col-lg-4">
-							<div class="feature-box fbox-center fbox-bg fbox-border fbox-effect">
-								<div class="fbox-icon">
-									<a href="#"><i>2</i></a>
+						<div class="col-sm-6 col-lg-3">
+							<div class="feature-box text-center media-box fbox-bg">
+								<div class="fbox-media" style="margin-bottom: 0px;">
+									<a href="#"><img src="assets/images/concrete-3-1256x837.jpg" alt="Featured Box Image"></a>
 								</div>
 								<div class="fbox-content">
 									<h3>Проведение мероприятий по ликвидации поглощений на 3 уровнях в зависимости от категории<span class="subtitle">•  Частичные поглощения – размер каналов до 5 мм
@@ -211,7 +211,9 @@
 						</div>
 </div>
 
-<div class="section border-top-0 m-0">
+<section data-bs-version="5.1" class="slider4 mbr-embla cid-t7jcTEeXzN" id="slider4-4c">
+  
+	<div class="section border-top-0 m-0">
 					<div class="container text-center">
 
 						<div class="heading-block center">
@@ -221,13 +223,8 @@
 						<p class="lead">может быть самостоятельным решением или получен на основе раствора S-Drill™, что значительно снижает затраты на борьбу с поглощением</p>
 
 					</div>
-</div>
-
-<section data-bs-version="5.1" class="slider4 mbr-embla cid-t7jcTEeXzN" id="slider4-4c">
-    
-    
-    <div class="position-relative text-center">
-        <div class="embla mt-4" data-skip-snaps="true" data-align="center" data-contain-scroll="trimSnaps" data-loop="true" data-auto-play-interval="5" data-draggable="true">
+    </div>
+        <div class="embla section border-top-0 m-0" data-skip-snaps="true" data-align="center" data-contain-scroll="trimSnaps" data-loop="true" data-auto-play-interval="5" data-draggable="true">
             <div class="embla__viewport container">
                 <div class="embla__container">
                     <div class="embla__slide slider-image item" style="margin-left: 1rem; margin-right: 1rem;">
