--- a/page3.html
+++ b/page3.html
@@ -100,7 +100,7 @@
 
 		</section><!-- #page-title end -->
 		
-		<section id="content">
+		<section id="content" class="d-none d-md-block">
 			<div class="content-wrap">
 				<div class="container">
 					<div class="row align-items-center">
@@ -109,7 +109,29 @@
 							<div class="heading-block">
 								<h1>Идеально подобранный компонентный состав</h1>
 							</div>
-							<p class="lead">Модифицированный крахмального реагент S-Drill™ St, стабилизированный реагентом S-Drill™ CL, позволяет добиться уникально низкой плотности системы, а также повысить экономическую эффективность в сравнении с традиционными системами.</p>
+							<p class="lead" style="line-height: 1;padding-top: 30px;">Модифицированный крахмального реагент S-Drill™ St, стабилизированный реагентом S-Drill™ CL, позволяет добиться уникально низкой плотности системы, а также повысить экономическую эффективность в сравнении с традиционными системами.</p>
+						</div>
+
+                        <div class="col-12 col-lg-6">
+								<img src="assets/images/foam-1-1160x1160.jpeg" style="border-radius:70px">
+						</div>
+
+
+					</div>
+				</div>
+		    </div>
+        </section>
+		
+		<section id="content" class="d-md-none">
+			<div class="content-wrap">
+				<div class="container">
+					<div class="row align-items-center">
+
+						<div class="col-12 col-lg" style="padding-bottom: 20px;">
+							<div class="heading-block center">
+								<h1>Идеально подобранный компонентный состав</h1>
+							</div>
+							<p class="lead center" style="line-height: 1;padding-top: 30px;">Модифицированный крахмального реагент S-Drill™ St, стабилизированный реагентом S-Drill™ CL, позволяет добиться уникально низкой плотности системы, а также повысить экономическую эффективность в сравнении с традиционными системами.</p>
 						</div>
 
                         <div class="col-12 col-lg-6">
@@ -123,7 +145,7 @@
         </section>
 
 
-<div class="section my-0">
+<div class="section my-0 d-none d-md-block">
 					<div class="container">
 
 						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
@@ -136,7 +158,7 @@
 									<h2>Простота и эффективность</h2>
 								</div>
 
-								<p class="lead">Формирование газожидкостной смеси может происходить как путем подачи азота одновременно с закачкой жидкой фазы в манифольд буровой установки, так и с использованием атмосферного воздуха при прохождении системы циркуляции бурового раствора.</p>
+								<p class="lead" style="line-height: 1;padding-top: 30px;">Формирование газожидкостной смеси может происходить как путем подачи азота одновременно с закачкой жидкой фазы в манифольд буровой установки, так и с использованием атмосферного воздуха при прохождении системы циркуляции бурового раствора.</p>
 
 							</div>
 						</div>
@@ -144,7 +166,28 @@
 					</div>
 </div>
 
-<section id="content">
+<div class="section my-0 d-md-none">
+					<div class="container">
+
+						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
+							<div class="col-12 col-lg">
+								<img src="assets/images/foam-2-1160x1160.jpeg" alt="Image" class="center-block" style="border-radius:70px">
+							</div>
+
+							<div class="col-12 col-lg-6">
+								<div class="heading-block center">
+									<h2>Простота и эффективность</h2>
+								</div>
+
+								<p class="lead center" style="line-height: 1;padding-top: 30px;">Формирование газожидкостной смеси может происходить как путем подачи азота одновременно с закачкой жидкой фазы в манифольд буровой установки, так и с использованием атмосферного воздуха при прохождении системы циркуляции бурового раствора.</p>
+
+							</div>
+						</div>
+
+					</div>
+</div>
+
+<section id="content" class="d-none d-md-block">
 			<div class="content-wrap">
 				<div class="container">
 					<div class="row align-items-center">
@@ -153,7 +196,29 @@
 							<div class="heading-block">
 								<h1>Уникальные стабилизирующие свойства S-Drill™ CL</h1>
 							</div>
-							<p class="lead">Концентрация S-Drill™ CL на контакте жидкой и газовой фазы обеспечивает прочность микропузырьков (эффект «бронирования»), что способствует длительной стабильности газожидкостной смеси.</p>
+							<p class="lead" style="line-height: 1;padding-top: 30px;">Концентрация S-Drill™ CL на контакте жидкой и газовой фазы обеспечивает прочность микропузырьков (эффект «бронирования»), что способствует длительной стабильности газожидкостной смеси.</p>
+						</div>
+
+                        <div class="col-12 col-lg-6">
+								<img src="assets/images/foam-3-1032x827.png" style="border-radius:70px">
+						</div>
+
+
+					</div>
+				</div>
+		    </div>
+</section>
+
+<section id="content" class="d-md-none">
+			<div class="content-wrap">
+				<div class="container">
+					<div class="row align-items-center">
+
+						<div class="col-12 col-lg">
+							<div class="heading-block center">
+								<h1>Уникальные стабилизирующие свойства S-Drill™ CL</h1>
+							</div>
+							<p class="lead center" style="line-height: 1;padding-top: 30px;">Концентрация S-Drill™ CL на контакте жидкой и газовой фазы обеспечивает прочность микропузырьков (эффект «бронирования»), что способствует длительной стабильности газожидкостной смеси.</p>
 						</div>
 
                         <div class="col-12 col-lg-6">
