--- a/page5.html
+++ b/page5.html
@@ -104,7 +104,7 @@
 
 	</section><!-- #page-title end -->
 	
-	<section id="content">
+	<section id="content" class="d-none d-md-block">
 			<div class="content-wrap">
 				<div class="container">
 					<div class="row align-items-center">
@@ -113,7 +113,29 @@
 							<div class="heading-block">
 								<h1>Легкое управление свойствами системы</h1>
 							</div>
-							<p class="lead">За счет высокой эффективности стабилизатора S-Drill™ CL возможно достичь исключительных реологических свойств раствора плотностью до 2300 кг/м3 в широком диапазоне пластовых температур без применения наполнителей с высокой абразивностью.</p>
+							<p class="lead" style="line-height: 1;padding-top: 30px;">За счет высокой эффективности стабилизатора S-Drill™ CL возможно достичь исключительных реологических свойств раствора плотностью до 2300 кг/м3 в широком диапазоне пластовых температур без применения наполнителей с высокой абразивностью.</p>
+						</div>
+
+                        <div class="col-12 col-lg-6">
+								<img src="assets/images/hw-1-1160x773.jpeg" style="border-radius:70px">
+						</div>
+
+
+					</div>
+				</div>
+		    </div>
+    </section>
+	
+	<section id="content" class="d-md-none">
+			<div class="content-wrap">
+				<div class="container">
+					<div class="row align-items-center">
+
+						<div class="col-12 col-lg" style="padding-bottom: 20px;">
+							<div class="heading-block center">
+								<h1>Легкое управление свойствами системы</h1>
+							</div>
+							<p class="lead center" style="line-height: 1;padding-top: 30px;">За счет высокой эффективности стабилизатора S-Drill™ CL возможно достичь исключительных реологических свойств раствора плотностью до 2300 кг/м3 в широком диапазоне пластовых температур без применения наполнителей с высокой абразивностью.</p>
 						</div>
 
                         <div class="col-12 col-lg-6">
@@ -147,7 +169,7 @@
 
 <!-- Before - After
 				============================================= -->
-				<div class="section m-0" style="background-color:#FFFFFF">
+				<div class="section m-0 d-none d-md-block" style="background-color:#FFFFFF">
 					<div class="container">
 						<div class="row align-items-center gutter-50">
 
@@ -162,28 +184,69 @@
 								<div class="heading-block mb-4">
 									<h2>Эффективная борьба с поглощениями бурового раствора</h2>
 								</div>
-								<p class="lead">S-Drill™ HW основан на растворе S-Drill™, для борьбы с поглощениями возможен легкий переход к вязко-упругому составу S-Drill™ Concrete</p>
+								<p class="lead" style="line-height: 1;">S-Drill™ HW основан на растворе S-Drill™, для борьбы с поглощениями возможен легкий переход к вязко-упругому составу S-Drill™ Concrete</p>
+							</div>
+
+						</div>
+					</div>
+				</div>
+				
+				<div class="section m-0 d-md-none" style="background-color:#FFFFFF">
+					<div class="container">
+						<div class="row align-items-center gutter-50">
+
+							<div class="col-12 col-lg">
+								<div class="twentytwenty-container">
+									<img src="assets/images/hw-3-1256x837.jpg" class="w-100" alt="Image 1" />
+									<img src="assets/images/hw-4-1256x837.jpg" class="w-100" alt="Image 2" />
+								</div>
+							</div>
+
+							<div class="col-12 col-lg-6">
+								<div class="heading-block mb-4 center">
+									<h2>Эффективная борьба с поглощениями бурового раствора</h2>
+								</div>
+								<p class="lead center" style="line-height: 1;">S-Drill™ HW основан на растворе S-Drill™, для борьбы с поглощениями возможен легкий переход к вязко-упругому составу S-Drill™ Concrete</p>
 							</div>
 
 						</div>
 					</div>
 				</div>
 
-<div class="section my-0" style="background-color: #FAFAFA;">
+<div class="section my-0 d-none d-md-block" style="background-color: #FAFAFA;">
 					<div class="container">
 
 						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
-							<div class="col-12 col-lg">
-								<img src="assets/images/s-drill-1-1160x536.png" alt="Image" class="center-block">
-							</div>
-
-							<div class="col-12 col-lg-6">
+						    <div class="col-12 col-lg">
 								<div class="heading-block">
 									<h2>Сохранение устойчивости глин</h2>
 								</div>
 
-								<p class="lead">Обеспечение устойчивости глинистых пород достигается за счет тщательно подобранной комбинации реагентов S-Drill™, обеспечивающей отсутствие влияния раствора на прочностные и деформационные свойства глин различной степени литификации ("эффект РУО"), что способствует улучшению показателей при проходке субгоризонтальных и горизонтальных стволов в глинистых отложениях.</p>
+								<p class="lead" style="line-height: 1;padding-top: 30px;">Обеспечение устойчивости глинистых пород достигается за счет тщательно подобранной комбинации реагентов S-Drill™, обеспечивающей отсутствие влияния раствора на прочностные и деформационные свойства глин различной степени литификации ("эффект РУО"), что способствует улучшению показателей при проходке субгоризонтальных и горизонтальных стволов в глинистых отложениях.</p>
 
+							</div>
+							<div class="col-12 col-lg-6">
+								<img src="assets/images/s-drill-1-1160x536.png" alt="Image" class="center-block">
+							</div>
+						</div>
+
+					</div>
+</div>
+
+<div class="section my-0 d-md-none" style="background-color: #FAFAFA;">
+					<div class="container">
+
+						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
+						    <div class="col-12 col-lg">
+								<div class="heading-block center">
+									<h2>Сохранение устойчивости глин</h2>
+								</div>
+
+								<p class="lead center" style="line-height: 1;padding-top: 30px;">Обеспечение устойчивости глинистых пород достигается за счет тщательно подобранной комбинации реагентов S-Drill™, обеспечивающей отсутствие влияния раствора на прочностные и деформационные свойства глин различной степени литификации ("эффект РУО"), что способствует улучшению показателей при проходке субгоризонтальных и горизонтальных стволов в глинистых отложениях.</p>
+
+							</div>
+							<div class="col-12 col-lg-6">
+								<img src="assets/images/s-drill-1-1160x536.png" alt="Image" class="center-block">
 							</div>
 						</div>
 
