--- a/page1.html
+++ b/page1.html
@@ -103,7 +103,7 @@
 
 		</section><!-- #page-title end -->
 
-<section id="content">
+<section id="content" class="d-none d-md-block">
 			<div class="content-wrap">
 				<div class="container">
 					<div class="row align-items-center">
@@ -112,7 +112,7 @@
 							<div class="heading-block">
 								<h1>Сохранение устойчивости глин</h1>
 							</div>
-							<p class="lead" style="line-height: 1;">Обеспечение устойчивости глинистых пород достигается за счет тщательно подобранной комбинации реагентов S-Drill™, обеспечивающей отсутствие влияния раствора на прочностные и деформационные свойства глин различной степени литификации ("эффект РУО")</p>
+							<p class="lead" style="line-height: 1;padding-top: 30px;">Обеспечение устойчивости глинистых пород достигается за счет тщательно подобранной комбинации реагентов S-Drill™, обеспечивающей отсутствие влияния раствора на прочностные и деформационные свойства глин различной степени литификации ("эффект РУО")</p>
 						</div>
 
 						<div class="col-12 col-lg-6">
@@ -128,7 +128,32 @@
 		    </div>
 </section>
 
-<div class="section my-0">
+<section id="content" class="d-md-none">
+			<div class="content-wrap">
+				<div class="container">
+					<div class="row align-items-center">
+
+						<div class="col-12 col-lg">
+							<div class="heading-block center">
+								<h1>Сохранение устойчивости глин</h1>
+							</div>
+							<p class="lead center" style="line-height: 1;padding-top: 30px;">Обеспечение устойчивости глинистых пород достигается за счет тщательно подобранной комбинации реагентов S-Drill™, обеспечивающей отсутствие влияния раствора на прочностные и деформационные свойства глин различной степени литификации ("эффект РУО")</p>
+						</div>
+
+						<div class="col-12 col-lg-6">
+
+							<div class="position-relative overflow-hidden">
+								<img src="assets/images/s-drill-1-1160x536.png">
+							</div>
+
+						</div>
+
+					</div>
+				</div>
+		    </div>
+</section>
+
+<div class="section my-0 d-none d-md-block">
 					<div class="container">
 
 						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
@@ -141,7 +166,7 @@
 									<h2>Отсутствие загрязнения продуктивных пластов</h2>
 								</div>
 
-								<p class="lead">Сохранность коллекторских свойств продуктивного пласта обеспечивается за счет подбора компонентного состава бурового раствора S-Drill™ под фильтрационно-емкостные свойства индивидуально для каждого разрабатываемого месторождения.</p>
+								<p class="lead" style="line-height: 1;padding-top: 30px;">Сохранность коллекторских свойств продуктивного пласта обеспечивается за счет подбора компонентного состава бурового раствора S-Drill™ под фильтрационно-емкостные свойства индивидуально для каждого разрабатываемого месторождения.</p>
 
 							</div>
 						</div>
@@ -149,7 +174,28 @@
 					</div>
 </div>
 
-<section id="content">
+<div class="section my-0 d-md-none">
+					<div class="container">
+
+						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
+							<div class="col-12 col-lg">
+								<img src="assets/images/s-drill-2-748x378.jpeg" alt="Image" class="center-block" style="border-radius:70px">
+							</div>
+
+							<div class="col-12 col-lg-6">
+								<div class="heading-block center">
+									<h2>Отсутствие загрязнения продуктивных пластов</h2>
+								</div>
+
+								<p class="lead center" style="line-height: 1;padding-top: 30px;">Сохранность коллекторских свойств продуктивного пласта обеспечивается за счет подбора компонентного состава бурового раствора S-Drill™ под фильтрационно-емкостные свойства индивидуально для каждого разрабатываемого месторождения.</p>
+
+							</div>
+						</div>
+
+					</div>
+</div>
+
+<section id="content" class="d-none d-md-block">
 			<div class="content-wrap">
 				<div class="container">
 					<div class="row align-items-center">
@@ -158,7 +204,32 @@
 							<div class="heading-block">
 								<h1>Эффективная борьба с поглощениями раствора</h1>
 							</div>
-							<p class="lead" style="line-height: 1;">Особенности бурового раствора S-Drill™ позволяют при возникновении поглощений трансформировать систему в вязко-упругий раствор для ликвидации поглощений S-Drill™ Concrete.</p>
+							<p class="lead" style="line-height: 1;padding-top: 30px;">Особенности бурового раствора S-Drill™ позволяют при возникновении поглощений трансформировать систему в вязко-упругий раствор для ликвидации поглощений S-Drill™ Concrete.</p>
+						</div>
+
+						<div class="col-12 col-lg-6">
+
+							<div class="position-relative overflow-hidden">
+								<img src="assets/images/s-drill-3-1160x773.jpeg" style="border-radius:70px">
+							</div>
+
+						</div>
+
+					</div>
+				</div>
+		    </div>
+</section>
+
+<section id="content" class="d-md-none">
+			<div class="content-wrap">
+				<div class="container">
+					<div class="row align-items-center">
+
+						<div class="col-12 col-lg">
+							<div class="heading-block center">
+								<h1>Эффективная борьба с поглощениями раствора</h1>
+							</div>
+							<p class="lead center" style="line-height: 1;padding-top: 30px;">Особенности бурового раствора S-Drill™ позволяют при возникновении поглощений трансформировать систему в вязко-упругий раствор для ликвидации поглощений S-Drill™ Concrete.</p>
 						</div>
 
 						<div class="col-12 col-lg-6">
@@ -182,7 +253,7 @@
 							<h2>Уникальные свойства реагента S-Drill™ CL</h2>
 						</div>
 
-						<p class="lead">позволяют добиться стабильных показателей основных технологических свойств бурового раствора S-Drill™ в условиях различных видов агрессии.</p>
+						<p class="lead" style="padding-top: 30px;">Позволяют добиться стабильных показателей основных технологических свойств бурового раствора S-Drill™ в условиях различных видов агрессии.</p>
 
 					</div>
 </div>
