--- a/page4.html
+++ b/page4.html
@@ -101,7 +101,7 @@
 
 		</section><!-- #page-title end -->
 		
-		<section id="content">
+		<section id="content" class="d-none d-md-block">
 			<div class="content-wrap">
 				<div class="container">
 					<div class="row align-items-center">
@@ -110,7 +110,29 @@
 							<div class="heading-block">
 								<h1>Универсальное решение для всех видов соляных отложений</h1>
 							</div>
-							<p class="lead">Комбинация реагентов S-Drill™ позволяет выйти на необходимые реологические показатели в присутствии солей.</p>
+							<p class="lead" style="line-height: 1;padding-top: 30px;">Комбинация реагентов S-Drill™ позволяет выйти на необходимые реологические показатели в присутствии солей.</p>
+						</div>
+
+                        <div class="col-12 col-lg-6">
+								<img src="assets/images/salt-1-1160x773.jpeg" style="border-radius:70px">
+						</div>
+
+
+					</div>
+				</div>
+		    </div>
+        </section>
+		
+		<section id="content" class="d-md-none">
+			<div class="content-wrap">
+				<div class="container">
+					<div class="row align-items-center">
+
+						<div class="col-12 col-lg" style="padding-bottom: 20px;">
+							<div class="heading-block center">
+								<h1>Универсальное решение для всех видов соляных отложений</h1>
+							</div>
+							<p class="lead center" style="line-height: 1;padding-top: 30px;">Комбинация реагентов S-Drill™ позволяет выйти на необходимые реологические показатели в присутствии солей.</p>
 						</div>
 
                         <div class="col-12 col-lg-6">
@@ -142,7 +164,7 @@
     </div>
 </section>
 
-<div class="section my-0" style="background-color: #FFF;">
+<div class="section my-0 d-none d-md-block" style="background-color: #FFF;">
 					<div class="container">
 
 						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
@@ -155,7 +177,28 @@
 									<h2>Сохранение устойчивости глин</h2>
 								</div>
 
-								<p class="lead">Обеспечение устойчивости глинистых пород достигается за счет тщательно подобранной комбинации реагентов S-Drill™, обеспечивающей отсутствие влияния раствора на прочностные и деформационные свойства глин различной степени литификации ("эффект РУО") </p>
+								<p class="lead" style="line-height: 1;padding-top: 30px;">Обеспечение устойчивости глинистых пород достигается за счет тщательно подобранной комбинации реагентов S-Drill™, обеспечивающей отсутствие влияния раствора на прочностные и деформационные свойства глин различной степени литификации ("эффект РУО") </p>
+
+							</div>
+						</div>
+
+					</div>
+</div>
+
+<div class="section my-0 d-md-none" style="background-color: #FFF;">
+					<div class="container">
+
+						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
+							<div class="col-12 col-lg">
+								<img src="assets/images/s-drill-1-1160x536.png" alt="Image" class="center-block">
+							</div>
+
+							<div class="col-12 col-lg-6">
+								<div class="heading-block center">
+									<h2>Сохранение устойчивости глин</h2>
+								</div>
+
+								<p class="lead center" style="line-height: 1;padding-top: 30px;">Обеспечение устойчивости глинистых пород достигается за счет тщательно подобранной комбинации реагентов S-Drill™, обеспечивающей отсутствие влияния раствора на прочностные и деформационные свойства глин различной степени литификации ("эффект РУО") </p>
 
 							</div>
 						</div>
