--- a/page1.html
+++ b/page1.html
@@ -36,7 +36,6 @@
 	<link rel="stylesheet" href="css/components/bs-switches.css" type="text/css" />
 
 	<link rel="stylesheet" href="css/custom.css" type="text/css" />
-	<link rel="stylesheet" href="css/colors.php?color=0C1CCC" type="text/css" />  
 </head>
 
 <body>
@@ -246,7 +245,7 @@
 </section>
 
 
-<div class="section border-top-0 m-0">
+<div class="section border-top-0 m-0" >
 					<div class="container text-center">
 
 						<div class="heading-block center">
@@ -257,7 +256,7 @@
 
 					</div>
 </div>
-<section data-bs-version="5.1" class="features13 cid-t7j8QXqt8u" id="features14-3y">
+<section data-bs-version="5.1" class="features13 cid-t7j8QXqt8u" id="features14-3y" style="background-color: #F9F9F9">
     
 
     
@@ -319,7 +318,7 @@
     </div>
 </section>
 
-<div class="section border-top-0 m-0">
+<div class="section border-top-0 m-0" style="background-color: #FFFFFF">
 					<div class="container text-center">
 
 						<div class="heading-block center">
