--- a/page2.html
+++ b/page2.html
@@ -225,7 +225,7 @@
 					<div class="row align-items-center">
 
 						<div class="col-12 col-lg">
-							<div class="heading-block center">
+							<div class="heading-block center" style="padding-bottom: 20px;">
 								<h1>Простота и удобство</h1>
 							</div>
 							<p class="lead center" style="line-height: 1;padding-top: 30px;">При ликвидации частичных поглощений бурового раствора может применятся без подъема КНБК как при роторном бурении, так и при бурении с забойным двигателем.</p>
@@ -260,8 +260,9 @@
 									<a href="#"><img src="assets/images/concrete-2-1256x837.jpg" alt="Featured Box Image"></a>
 								</div>
 								<div class="fbox-content">
-									<h3>Определение фильтрационно-емкостных свойств<span class="subtitle">Расчет эквивалентного сечения каналов на основании математических моделей кольматационных процессов.
-<br>Поэтапное введение наполнителя различной фракции от меньшего к большему позволяет определить размер порового канала и способствует его последующей кольматации.</span></h3>
+									<h3>Определение фильтрационно-емкостных свойств</h3>
+									<p class="lead">Расчет эквивалентного сечения каналов на основании математических моделей кольматационных процессов.
+<br>Поэтапное введение наполнителя различной фракции от меньшего к большему позволяет определить размер порового канала и способствует его последующей кольматации.</p>
 								</div>
 							</div>
 						</div>
@@ -272,9 +273,10 @@
 									<a href="#"><img src="assets/images/concrete-3-1256x837.jpg" alt="Featured Box Image"></a>
 								</div>
 								<div class="fbox-content">
-									<h3>Проведение мероприятий по ликвидации поглощений на 3 уровнях в зависимости от категории<span class="subtitle">•  Частичные поглощения – размер каналов до 5 мм
+									<h3>Проведение мероприятий по ликвидации поглощений на 3 уровнях в зависимости от категории</h3>
+									<p class="lead">•  Частичные поглощения – размер каналов до 5 мм
 <br>•  Полные поглощения – размер каналов до 50 мм
-<br>• Катастрофические поглощения – размер каналов более 50 мм&nbsp;</span></h3>
+<br>• Катастрофические поглощения – размер каналов более 50 мм&nbsp;</span></p>
 								</div>
 							</div>
 						</div>
