--- a/page3.html
+++ b/page3.html
@@ -34,8 +34,7 @@
 	<!-- Bootstrap Switch CSS -->
 	<link rel="stylesheet" href="css/components/bs-switches.css" type="text/css" />
 
-	<link rel="stylesheet" href="css/custom.css" type="text/css" />
-	<link rel="stylesheet" href="css/colors.php?color=0C1CCC" type="text/css" />  
+	<link rel="stylesheet" href="css/custom.css" type="text/css" /> 
 </head>
 <body>
 	<header id="header" class="border-bottom-0">
@@ -214,7 +213,7 @@
 				<div class="container">
 					<div class="row align-items-center">
 
-						<div class="col-12 col-lg">
+						<div class="col-12 col-lg" style="padding-bottom: 20px;">
 							<div class="heading-block center">
 								<h1>Уникальные стабилизирующие свойства S-Drill™ CL</h1>
 							</div>
