--- a/page7.html
+++ b/page7.html
@@ -34,7 +34,6 @@
 	<link rel="stylesheet" href="css/components/bs-switches.css" type="text/css" />
 
 	<link rel="stylesheet" href="css/custom.css" type="text/css" />
-	<link rel="stylesheet" href="css/colors.php?color=0C1CCC" type="text/css" />  
 </head>
 <body>
 	<header id="header" class="border-bottom-0">
@@ -99,7 +98,7 @@
 
 		</section><!-- #page-title end -->
 		
-		<section id="content">
+		<section id="content" class="d-none d-md-block">
 			<div class="content-wrap">
 				<div class="container">
 					<div class="row align-items-center">
@@ -108,7 +107,32 @@
 							<div class="heading-block">
 								<h1>Описание</h1>
 							</div>
-							<p class="lead" style="line-height: 1;">Модифицированный крахмальный реагент S-Drill™ St представляет собой биополимер комплексного действия, устойчивый к ферментативному разложению и температуре, получаемый в результате сополимеризации поликарбоксилатного лигнина с крахмалом.</p>
+							<p class="lead" style="line-height: 1;padding-top: 30px;">Модифицированный крахмальный реагент S-Drill™ St представляет собой биополимер комплексного действия, устойчивый к ферментативному разложению и температуре, получаемый в результате сополимеризации поликарбоксилатного лигнина с крахмалом.</p>
+						</div>
+
+						<div class="col-12 col-lg-6">
+
+							<div class="position-relative overflow-hidden">
+								<img src="assets/images/st-1-1160x773.jpeg" style="border-radius:70px">
+							</div>
+
+						</div>
+
+					</div>
+				</div>
+		    </div>
+        </section>
+		
+		<section id="content" class="d-md-none">
+			<div class="content-wrap">
+				<div class="container">
+					<div class="row align-items-center">
+
+						<div class="col-12 col-lg" style="padding-bottom: 20px;">
+							<div class="heading-block center">
+								<h1>Описание</h1>
+							</div>
+							<p class="lead center" style="line-height: 1;padding-top: 30px;">Модифицированный крахмальный реагент S-Drill™ St представляет собой биополимер комплексного действия, устойчивый к ферментативному разложению и температуре, получаемый в результате сополимеризации поликарбоксилатного лигнина с крахмалом.</p>
 						</div>
 
 						<div class="col-12 col-lg-6">
@@ -124,7 +148,7 @@
 		    </div>
         </section>
         
-		<div class="section my-0">
+		<div class="section my-0 d-none d-md-block">
 					<div class="container">
 
 						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
@@ -137,7 +161,7 @@
 									<h2>Применение</h2>
 								</div>
 
-								<p class="lead">Применяют для приготовления и обработки буровых растворов на водной основе с различной степенью минерализации для стабилизации и регулирования фильтрационных характеристик
+								<p class="lead" style="line-height: 1;padding-top: 30px;">Применяют для приготовления и обработки буровых растворов на водной основе с различной степенью минерализации для стабилизации и регулирования фильтрационных характеристик
 <br>
 <br>S-Drill™ St хорошо растворим в пресной и минерализованной воде и позволяет регулировать параметры технологических жидкостей при температуре до 120 °С
 <br>
@@ -149,7 +173,32 @@
 					</div>
         </div>
 		
-<div class="section my-0" style="background-color: #FFFFFF;">
+		<div class="section my-0 d-md-none">
+					<div class="container">
+
+						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
+							<div class="col-12 col-lg">
+								<img src="assets/images/st-2-1160x1740.jpeg" alt="Image" class="center-block" style="border-radius:70px">
+							</div>
+
+							<div class="col-12 col-lg-6">
+								<div class="heading-block center">
+									<h2>Применение</h2>
+								</div>
+
+								<p class="lead center" style="line-height: 1;padding-top: 30px;">Применяют для приготовления и обработки буровых растворов на водной основе с различной степенью минерализации для стабилизации и регулирования фильтрационных характеристик
+<br>
+<br>S-Drill™ St хорошо растворим в пресной и минерализованной воде и позволяет регулировать параметры технологических жидкостей при температуре до 120 °С
+<br>
+<br>В комбинации с реагентом S-Drill™ CL не подвержен ферментативному разложению</p>
+
+							</div>
+						</div>
+
+					</div>
+        </div>
+		
+<div class="section my-0 d-none d-md-block" style="background-color: #FFFFFF;">
 					<div class="container">
 
 						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
@@ -159,19 +208,50 @@
 
 							<div class="col-12 col-lg-6">
 								<div class="heading-block">
-									<h2>Показатели физико-химических свойств стабилизатора S-Drill™ Ct</h2>
+									<h2>Показатели физико-химических свойств стабилизатора S-Drill™&nbsp;Ct</h2>
 								</div>
 
-								<p class="lead"><strong>•	Назначение 
-</strong><br>Стабилизация и регулирование фильтрационных характеристик бурового раствора на водной основе
+								<p class="lead" style="line-height: 1;padding-top: 30px;"><strong>•	Назначение 
+</strong><br>&nbsp;&nbsp;Стабилизация и регулирование фильтрационных характеристик бурового раствора на водной основе
 <br><strong>•	Требования безопасности
-</strong><br>Не классифицируется как опасный продукт. Относится к группе трудновоспламеняемых горючих материалов по ГОСТ 12.1.044
+</strong><br>&nbsp;&nbsp;Не классифицируется как опасный продукт. Относится к группе трудновоспламеняемых горючих материалов по ГОСТ 12.1.044
 <br><strong>•	Упаковка
-</strong><br>Мешок 25 кг
+</strong><br>&nbsp;&nbsp;Мешок 25 кг
 <br><strong>•	Условия хранения и транспортировки
-</strong><br>При хранении и транспортировке необходимо соблюдать целостность упаковочной тары. Хранение должно осуществляться в сухом месте при температуре от -40 до +50 С
+</strong><br>&nbsp;&nbsp;При хранении и транспортировке необходимо соблюдать целостность упаковочной тары. Хранение должно осуществляться в сухом месте при температуре от -40 до +50 С
 <br><strong>•	Гарантийный срок
-</strong><br>Гарантийный срок - 12 месяцев с даты изготовления. Срок годности не ограничен при соблюдении условий транспортировки и хранения&nbsp;<br></p>
+</strong><br>&nbsp;&nbsp;Гарантийный срок - 12 месяцев с даты изготовления. Срок годности не ограничен при соблюдении условий транспортировки и хранения&nbsp;<br></p>
+
+							</div>
+						</div>
+
+					</div>
+</div>
+
+<div class="section my-0 d-md-none" style="background-color: #FFFFFF;">
+					<div class="container">
+
+						<div class="row align-items-center col-mb-30 mt-0 mt-lg-5">
+							<div class="col-12 col-lg">
+								<img src="assets/images/st-3-793x367.png" alt="Image" class="center-block">
+							</div>
+
+							<div class="col-12 col-lg-6">
+								<div class="heading-block center">
+									<h2>Показатели физико-химических свойств стабилизатора S-Drill™&nbsp;Ct</h2>
+								</div>
+
+								<p class="lead center" style="line-height: 1;padding-top: 30px;"><strong>Назначение
+ 
+</strong><br>&nbsp;&nbsp;Стабилизация и регулирование фильтрационных характеристик бурового раствора на водной основе
+<br><strong>Требования безопасности
+</strong><br>&nbsp;&nbsp;Не классифицируется как опасный продукт. Относится к группе трудновоспламеняемых горючих материалов по ГОСТ 12.1.044
+<br><strong>Упаковка
+</strong><br>&nbsp;&nbsp;Мешок 25 кг
+<br><strong>Условия хранения и транспортировки
+</strong><br>&nbsp;&nbsp;При хранении и транспортировке необходимо соблюдать целостность упаковочной тары. Хранение должно осуществляться в сухом месте при температуре от -40 до +50 С
+<br><strong>Гарантийный срок
+</strong><br>&nbsp;&nbsp;Гарантийный срок - 12 месяцев с даты изготовления. Срок годности не ограничен при соблюдении условий транспортировки и хранения&nbsp;<br></p>
 
 							</div>
 						</div>
